--- a/handout.tex
+++ b/handout.tex
@@ -398,6 +398,10 @@ documents. See http://rpubs.com/RobinLovelace/5089 \label{fnrpub} .}
 % This section is based on ``Spatial microsimulation in R: a
 % beginner’s guide to iterative proportional fitting (IPF)'', a tutorial
 % written to accompany a methods paper on integerisation
+The code snippets are taken from the `simple.R' script file (just a plain text
+document, like all R scripts) so you can copy and paste. However, it is
+highly recommended to not look at this file until after you've completed this
+section, in keeping with the `learning by doing' ethic.
 
 \emph{Loading in the data}
 
