--- a/handout.tex
+++ b/handout.tex
@@ -332,6 +332,7 @@ true:
 % }}, \frac{?}{?}, \frac{9}{2})
 w(3) = (\frac{6}{5}, \frac{6}{5}, \boldsymbol{\frac{18}{5}}, \frac{3}{2},
 \frac{9}{2})
+\label{finalout}
 \end{equation}
 
 What do the weights in w(3) actually mean? They indicate how representative
@@ -400,10 +401,9 @@ documents. See http://rpubs.com/RobinLovelace/5089 \label{fnrpub} .}
 % written to accompany a methods paper on integerisation
 The code snippets are taken from the `simple.R' script file (just a plain text
 document, like all R scripts) so you can copy and paste. However, it is
-highly recommended to not look at this file until after you've completed this
-section, in keeping with the `learning by doing' ethic.
-
-\emph{Loading in the data}
+highly recommended to not look at this file until you need to, towards
+the end of
+section. This is `leaning by typing'!
 
 The data presented in the above worked example are saved in the
 `simple' sub-folder of `data' as .csv files. To load them in R,
@@ -424,12 +424,12 @@ RStudio's top right window.}
 \begin{lstlisting}[float=h, caption={Checking the contents of the individual
 level data frame}, label=cout]
 ind # Show the data frame in R
-##   id age sex
-## 1  1  59   m
-## 2  2  54   m
-## 3  3  35   m
-## 4  4  73   f
-## 5  5  49   f
+##  id age sex
+##   1  59   m
+##   2  54   m
+##   3  35   m
+##   4  73   f
+##   5  49   f
 \end{lstlisting}
 
 Note that the input data is identical to the tables illustrated above for
@@ -573,43 +573,83 @@ to the individuals via IPF. Below is written in code the IPF formula presented
 in \cref{ipfeq}.
 
 \begin{lstlisting}[float=h, caption={Creating new weights for the individuals
-based on constraint 1 (sex) via IPF}, label=ccheck]
+based on constraint 1 (age) via IPF}, label=ccheck]
 for (j in 1:nrow(cons)){
   for(i in 1:ncol(con1)){
  weights[which(ind.cat[,i] == 1),j] <- con1[j,i] / ind.agg[j,i]}}
 \end{lstlisting}
 
-The above code created the weight matrix that allocates individuals to zones.
+The above code creates the weight matrix that allocates individuals to zones.
 Aggregating this data to zones allows us to update `ind.agg' with new values
-that will be closer to the constraint variables.
+that will be closer to the constraint variables. This is verified in the `simple.R'
+script file with a line of code that calculates the Total Absolute Error
+after each iteration --- \verb sum(sqrt((ind.agg-cons)^2)) .
+Check the error decreases with each iteration.
 
+At this stage you should switch to running the code in `simple.R'. In RStudio
+to run a line of code from the top left window, simply press \verb Ctl-Enter .
+Use this technique to constrain by the second constraint, sex.
+Notice that we have just done in code what was previously done by
+hand. % TODO: and in a spreadsheet!
+Thus we can verify the output of the R implementation against 
+that obtained through mental arithmetic. Compare
+the following listing with \cref{finalout}: are the weights the same?
+
+\begin{lstlisting}[float=h, caption={W(3) after constraining by age and sex in R. 
+Compare with \cref{finalout}}, label=ccheck]
+weights3[,1] # check the weights allocated for zone 1
+##    [1] 1.2 1.2 3.6 1.5 4.5
+\end{lstlisting}
+
+\newpage
 \subsection{Iterations}
 
 In the above example, we have seen the `bare bones' of spatial microsimulation
 using IPF to generate weights from which sample populations can be created.
 To perform multiple iterations of the same model, we have prepared a slightly
 more complex script than `simple.R' called `etsim.R' that can be found in the
-simple folder. This generates weights for as many iterations as you please (by
-setting the value of \verb num.its ).
+`data/simple/' folder. Th etsim script
+generates weights for as many iterations as you please (just
+change the value of \verb num.its ). This happens by calling another
+script called `e2.R' which is simply run repeatedly for each iteration. 
 
 There
 is great scope for taking the analysis further:
 some further tests and plots are presented on the on-line
 versions of this section. The simplest case is contained in
-Rpubs document \href{http://rpubs.com/RobinLovelace/6193}{6193} and a more
-complex case (with three constraints) can be found in Rpubs document
+Rpubs document \href{http://rpubs.com/RobinLovelace/6193}{rpubs.com/RobinLovelace/6193} 
+and a more complex case (with three constraints) can be found in Rpubs document
 \href{http://rpubs.com/RobinLovelace/5089}{5089}. For now, however,
 we progress to a more complex example, CakeMap.
 
 \section{CakeMap: A worked example}
 
-\subsection{Loading the input data}
+In this section we will process real data to arrive at an important result:
+an estimate of the amount of cake eaten in different wards in Leeds. The
+example is deliberately rather absurd: hopefully this will make
+the technique more memorable. An attempt has been made to present the method
+in a generalisable was as possible, allowing users to apply the technique described
+here to their own data.
 
-\subsection{Preparing the input data for IPF}
+The code needed to run the main part of the example is contained within `cakeMap.R'.
+Note that this script makes frequent reference to files contained in the `cakeMap'
+folder `data'. \verb read.csv("data/cakeMap/ind.csv") , for example, is used to read
+the individual level data into R.
+
+Because this example uses real world data (albeit in anonymised form),
+we will see how important the process of `data cleaning' is.
+Rarely are datasets downloaded in exactly the right form for them to
+be pumped directly into a spatial microsimulation model. For that reason
+we describe the process of loading and preparing the input data first:
+similar steps will be needed to use your own data as an input into a
+spatial microsimulation model.
+
+\subsection{Loading and preparing the input data}
 
 \subsection{Performing IPF on the CakeMap data}
 
 \section{Applying the technique in the real world} \label{smeval}
+Here we will continue with the cakeMap model we ran in the previous section.
 
 \subsection{Model checking}
 To make an analogy with food safety standards, openness about mistakes is
