handout.tex edited line 1

--- a/handout.tex
+++ b/handout.tex
@@ -1,3 +1,5 @@
+% comments, comments, comments
+
 \documentclass[a4paper, 11pt, twoside]{article}  
 \usepackage[hcentering,bindingoffset=10mm,margin=20mm]{geometry}
 \usepackage{graphicx}
